2009-01-19  Steve Falkenburg  <sfalken@apple.com>

        Fix Windows release build.
        Move SVG files into all-in-one file for Windows build.

        * WebCore.vcproj/WebCore.vcproj:
        * svg/SVGAllInOne.cpp: Added.

2009-01-19  Steve Falkenburg  <sfalken@apple.com>

        Partial build fix.
        Move new derived sources into all-in-one DerivedSources.cpp

        * DerivedSources.cpp:
        * WebCore.vcproj/WebCore.vcproj:

2009-01-19  Sam Weinig  <sam@webkit.org>

        Fix Qt build.

        * bridge/qt/qt_instance.cpp:
        (JSC::Bindings::QtInstance::mark):
        * bridge/qt/qt_runtime.cpp:
        (JSC::Bindings::valueRealType):
        (JSC::Bindings::convertValueToQVariant):
        (JSC::Bindings::QtRuntimeConnectionMethod::call):
        (JSC::Bindings::QtConnectionObject::execute):

2009-01-19  Sam Weinig  <sam@webkit.org>

        Fix wx build.

        * plugins/PluginView.cpp:
        (WebCore::getString):

2009-01-19  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Gavin Barraclough.

        Remove temporary operator-> from JSValuePtr.

        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSAudioConstructor.cpp:
        (WebCore::constructAudio):
        * bindings/js/JSCanvasRenderingContext2DCustom.cpp:
        (WebCore::toHTMLCanvasStyle):
        (WebCore::JSCanvasRenderingContext2D::setFillColor):
        (WebCore::JSCanvasRenderingContext2D::setStrokeColor):
        (WebCore::JSCanvasRenderingContext2D::strokeRect):
        (WebCore::JSCanvasRenderingContext2D::drawImage):
        (WebCore::JSCanvasRenderingContext2D::drawImageFromRect):
        (WebCore::JSCanvasRenderingContext2D::setShadow):
        (WebCore::JSCanvasRenderingContext2D::createPattern):
        (WebCore::JSCanvasRenderingContext2D::putImageData):
        (WebCore::JSCanvasRenderingContext2D::fillText):
        (WebCore::JSCanvasRenderingContext2D::strokeText):
        * bindings/js/JSClipboardCustom.cpp: